--- a/src/sass/components/_home_team.sass
+++ b/src/sass/components/_home_team.sass
@@ -81,11 +81,10 @@
       font-size: 0
       margin: 10px 0
       cursor: pointer
-
       img
         will-change: filter
         filter: grayscale(100) brightness(1.2) blur(0.4px)
-        transition: all $transitionSpeed $ease
+        transition: filter .25s linear
     .slick-current
       .swiper-slide
         img
